reset and restore api

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,7 @@
             <div slot="content">
                 <h1>Page content</h1>
                 <air-cruddy-elasticsearch id="cruddy" data="{{data}}" url="http://localhost:9200/5elements/5elements"
-                                          entity-id="1" debug auto-save>
+                                          entity-id="1" debug>
                     <!--<div>id : [[data.id]]</div>-->
                     <paper-input label="Firstname" value="{{data.firstname}}" required></paper-input>
                     <paper-input label="Lastname" value="{{data.lastname}}" required></paper-input>
