--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
                     <!--<div>id : [[data.id]]</div>-->
                     <paper-input label="Firstname" value="{{data.firstname}}" required></paper-input>
                     <paper-input label="Lastname" value="{{data.lastname}}" required></paper-input>
-                    <paper-input label="Age" value="{{data.age}}" error-message="Obligatoire" required></paper-input>
+                    <paper-input label="Age" value="{{data.age}}" error-message="L'age est obligatoire" required type="number" allowed-pattern="[0-9]" step="1"></paper-input>
                 </air-cruddy-elasticsearch>
                 <sample-content size="10"></sample-content>
                 <!--<div>End sample</div>-->
